--- a/platformio.ini
+++ b/platformio.ini
@@ -8,14 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [env:placaEmisora]
 platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-    PubSubClient
-
-    
-
-
+	/home/ruben/Documents/Library/RemoteLogLibrary
+	
