Added authorization to MQTT config file

--- a/codigo/dockercomposes/mongo-compose/telegraf.conf
+++ b/codigo/dockercomposes/mongo-compose/telegraf.conf
@@ -15,8 +15,8 @@
     servers = ["tcp://mqtt5:1883"] 
     ## Topics that will be subscribed to.
     topics = [
-      "telegraf/host01/cpu",
-      "telegraf/+/mem",
+      "topicX",
+      "your/topic/here",
       "sensors/#",
       "#",
     ]
@@ -58,8 +58,8 @@
     client_id = "mosquitto-broker"
 
     ## Username and password to connect MQTT server.
-    # username = "telegraf"
-    # password = "metricsmetricsmetricsmetrics"
+    username = "user" ## Set your user
+    password = "user1" ## Set your password
 
     ## Data format to consume.
     ## Each data format has its own unique set of configuration options, read
