--- a/codigo/dockercomposes/mongo-compose/config/mosquitto.conf
+++ b/codigo/dockercomposes/mongo-compose/config/mosquitto.conf
@@ -1,6 +1,8 @@
-allow_anonymous true
 listener 1883
+
 persistence true
-password_file /mosquitto/config/pwfile
-persistence_file mosquitto.db
 persistence_location /mosquitto/data/
+log_dest file /mosquitto/log/mosquitto.log
+
+allow_anonymous false
+password_file /mosquitto/config/mosquitto_passwords
