--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,5 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = 
-	/home/ruben/Documents/Library/RemoteLogLibrary
+lib_deps = https://github.com/Rubens05/RemoteLogLibrary.git
 	
